@@ -25,6 +25,7 @@ import time
 import select
 import errno
 import asyncore
+import threading
 if os.name == 'nt':
     from .nt import PipePeek
 else:
@@ -57,7 +58,7 @@ def strip_asyncobj(wtd, file_type, socket_map):
         if asyncobj is not None:
             wtd.remove(fd)
 
-def clewn_select(iwtd, owtd, ewtd, timeout, socket_map, select_thread):
+def clewn_select(iwtd, owtd, ewtd, timeout, poll):
     """Windows select emulation on pipes and sockets.
 
     The select_peeker thread, once created, is never destroyed.
@@ -67,25 +68,23 @@ def clewn_select(iwtd, owtd, ewtd, timeout, socket_map, select_thread):
     pipe_objects = []
 
     # pipes send only read events
-    strip_asyncobj(owtd, asyncproc.FileWrapper, socket_map)
-    strip_asyncobj(ewtd, asyncproc.FileWrapper, socket_map)
+    strip_asyncobj(owtd, asyncproc.FileWrapper, poll.socket_map)
+    strip_asyncobj(ewtd, asyncproc.FileWrapper, poll.socket_map)
 
     # start the peek threads
     for fd in iwtd:
-        asyncobj = get_asyncobj(fd, asyncproc.FileWrapper, socket_map)
+        asyncobj = get_asyncobj(fd, asyncproc.FileWrapper, poll.socket_map)
         if asyncobj is not None:
             assert hasattr(asyncobj, 'reader') and asyncobj.reader
             if not hasattr(asyncobj, 'peeker'):
-                asyncobj.peeker = PipePeek(asyncobj.socket.fileno(), asyncobj)
+                asyncobj.peeker = PipePeek(asyncobj.socket.fileno(),
+                                            asyncobj, poll.select_event)
                 asyncobj.peeker.start()
             pipe_objects.append(asyncobj)
             iwtd.remove(fd)
             asyncobj.peeker.start_thread()
     if iwtd or owtd or ewtd:
-        select_peeker = select_thread
-
-        if not select_peeker.isAlive():
-            select_peeker.start()
+        select_peeker = poll.select_thread
 
         select_peeker.set_waitable(iwtd, owtd, ewtd)
         select_peeker.start_thread()
@@ -94,7 +93,7 @@ def clewn_select(iwtd, owtd, ewtd, timeout, socket_map, select_thread):
     if select_peeker is None and not pipe_objects:
         time.sleep(timeout)
     else:
-        asyncproc.Peek.select_event.wait(timeout)
+        poll.select_event.wait(timeout)
 
     # stop the select threads
     iwtd = []
@@ -106,24 +105,38 @@ def clewn_select(iwtd, owtd, ewtd, timeout, socket_map, select_thread):
         asyncobj.peeker.stop_thread()
         if asyncobj.peeker.read_event:
             iwtd.append(asyncobj.socket.fileno())
-    asyncproc.Peek.select_event.clear()
+    poll.select_event.clear()
 
     return iwtd, owtd, ewtd
 
 class Poll:
-    """A Poll instance manage a select thread."""
+    """A Poll instance manages a select thread.
+
+    Instance attributes:
+        socket_map: dict
+            the asyncore map
+        select_thread: Thread
+            the thread running the select call
+        select_event: Event
+            the Event object that the clewn_select emulation is waiting on
+
+    """
 
     def __init__(self, socket_map):
         """Constructor."""
         self.socket_map = socket_map
         if use_select_emulation:
-            self.select_thread = None
+            self.select_event = threading.Event()
+            self.select_thread = asyncproc.SelectPeek(
+                                        self.socket_map, self.select_event)
+            # note that the socket_map MUST NOT be empty
+            self.select_thread.start()
 
     def close(self):
         """Terminate the select thread."""
         if use_select_emulation and not self.socket_map:
             if self.select_thread and self.select_thread.isAlive():
-                self.select_thread.start_thread()
+                self.select_thread.join()
 
     def run(self, timeout=0.0):
         """Run the asyncore poll function."""
@@ -143,14 +156,7 @@ class Poll:
             else:
                 try:
                     if use_select_emulation:
-                        # when running the testsuite, replace
-                        # the previous dead thread
-                        if (not self.select_thread or not
-                                    self.select_thread.isAlive()):
-                            self.select_thread = asyncproc.SelectPeek(
-                                                            self.socket_map)
-                        r, w, e = clewn_select(r, w, e, timeout,
-                                        self.socket_map, self.select_thread)
+                            r, w, e = clewn_select(r, w, e, timeout, self)
                     else:
                         r, w, e = select.select(r, w, e, timeout)
                 except select.error as err:
